* Fixed issue with UI authentication sometimes re-prompting when multiple requests were in flight. * Adopted using upload scheduler for metadata uploads which both improves speed and makes it count towards total concurrent uploads setting. * Added warning in UI about UI credentials being stored in clear text. * Fixed issue adding interface credentials during initial setup. * Fixed potential deadlock in the state logger component.